--- a/src/app/dashboard/add-blog/add-blog.component.html
+++ b/src/app/dashboard/add-blog/add-blog.component.html
@@ -1,3 +1,10 @@
+<div class="card flex justify-content-center">
+  <p-multiSelect
+    [options]="cities"
+    [(ngModel)]="selectedCities"
+    optionLabel="name"
+  ></p-multiSelect>
+</div>
 <div class="mainpage">
   <form (ngSubmit)="addblog()" [formGroup]="formGroup" #addblogForm="ngForm">
     <div class="form-sections">
