--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -59,18 +59,19 @@
       <button
         class="p-button-text"
         routerLinkActive="activebutton"
-        [routerLink]="['BlogPage/6544f0497b0a5e6707677147']"
-        label="Blog"
-        pButton
-      ></button
-      ><button
-        class="p-button-text"
-        routerLinkActive="activebutton"
         [routerLink]="['AddBlog']"
         label="Add Blog"
         pButton
       ></button
       ><button
+        class="p-button-text"
+        routerLinkActive="activebutton"
+        [routerLink]="['EditBlog/6569fe8b5fd9d920d37fef8f']"
+        label="Edit Blog"
+        pButton
+      ></button>
+
+      <button
         class="p-button-text"
         routerLinkActive="activebutton"
         [routerLink]="['Users']"
