--- a/src/app/pages/blog-page/blog-page.component.html
+++ b/src/app/pages/blog-page/blog-page.component.html
@@ -1,15 +1,15 @@
 <div class="mainpage">
   <div>
-    <span class="categ" *ngFor="let cat of blog.selectedCategorys">{{
-      cat
-    }}</span>
+    <span class="categ" *ngFor="let cat of blog.selectedCategorys">
+      {{ cat }}
+    </span>
   </div>
   <div class="createAt">{{ blog.createdAt | date : "MMM d, y" }}</div>
 
   <h2>{{ blog.title }}</h2>
   <div class="shortDescription">{{ blog.shortDescription }}</div>
   <p-image
-    src="../../../assets/img/presale-table-tokens-page.jpg"
+    [src]="blog.chartImage"
     alt="Image"
     height="400px"
     [preview]="true"
