--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -1,7 +1,21 @@
+.no-blogs-found{
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.no-blogs-found i {
+  font-size: 40px;
+}
+
+.no-blogs-found span{
+  color: var(--graycolor);  
+}
 
 .mainpage {
     max-width: 1300px;
-    margin: auto;
+    margin: 20px auto;
 }
   
   .split-section {
@@ -10,7 +24,6 @@
     justify-content: space-between;
 
 }
-  
   .left-section {
     width: calc(100% - 320px);  
 }
@@ -19,14 +32,10 @@
     display: flex;
     gap: 10px;
   }
-  
-  .p-inputgroup {
-    /* Add your styles here */
-  }
-  .p-inputgroup button{
-    height: 47px ;
-  }
-  
+ .content-min-height{
+  min-height: 650px;
+
+ } 
   
   .blogs {
     display: flex;
@@ -37,39 +46,75 @@
   .blog {
     padding: 10px;
     height: 220px;
-    background-color: var(--soft-bgcolor);
     border-radius: 10px;
-
-}
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
   
-  .blog-right-section {
-    /* Add your styles here */
+  .blog:hover {
+    background-color: var(--soft-bgcolor);
+  }
+  .blog-left-section {
+    position: relative;
   }
   
   .blog-title {
-    /* Add your styles here */
+    color: var(--maincolor);
+    font-size: 25px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient:  vertical;
+    overflow:  hidden;
   }
-  
+  .blog-title:hover {
+    text-decoration: underline;
+  }
+  .blog-description{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient:  vertical;
+    overflow:  hidden;
+  }
   .blog-category {
-    /* Add your styles here */
+    color: var(--graycolor);
+    margin-bottom: 15px;
+    font-size: 14px;
   }
   
   .blog-tags {
-    /* Add your styles here */
+    display: flex;
+    gap: 5px;
+    position: absolute;
+    bottom: 30px;
   }
   
   .blog-tag {
-    /* Add your styles here */
+    font-size: 14px;
+    background-color: var(--special-button-background);
+    color: var(--special-button-color);
+    padding: 2px 5px ;
+    border-radius: 5px;
   }
   
   .blog-date {
-    /* Add your styles here */
+    font-size: 14px;
+    width: max-content;
+    color: var(--graycolor);
+    position: absolute;
+    bottom: 5px;
   }
   
   .blog-img {
-    /* Add your styles here */
+    width: 220px;
+    height: 210px;
   }
-  
+  .blog-img img{
+    width: 220px;
+    height: 210px;
+    border-radius: 10px;
+    overflow: hidden;
+  }
   .right-section {  
     width: 300px; 
     display: flex;
@@ -83,15 +128,13 @@
     padding: 10px;
   }
   
-  .recommended-topic {
-    /* Add your styles here */
-  }
   
   .recommended-topic-middle-button {
-
     margin-top: 20px;
     display: flex;
     justify-content: center;
+    background-color: none;
+    border: none !important;
 }
   
   .recommended-tags {
@@ -107,8 +150,33 @@
     padding: 2px 5px ;
     border-radius: 5px;
 }
-
-  
+.recommended-tag:hover {
+  cursor: pointer;
+}
+.topFreeBlog-i{
+  font-size: 14px !important;
+}
+.topFreeBlog-title{
+  color: var(--maincolor);
+}
+.topFreeBlog-title:hover {
+  text-decoration: underline;
+}
+.topFreeBlog-title span{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient:  vertical;
+  overflow:  hidden;
+}
+.topFreeBlog-shortDescription{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient:  vertical;
+  overflow:  hidden;
+  color: var(--graycolor);
+  margin: 5px auto 10px 0;
+  font-size: 15px;
+}
   .Newsletter {
     display: flex;
     flex-direction: column;
@@ -121,8 +189,10 @@
 }
   
   .privacy-note {
-    /* Add your styles here */
+    color:var(--graycolor);
+    font-size: 14px;
   }
-  
-  /* Add any additional styles as needed for responsiveness and layout */
+  .paginator{
+    margin: 10px;
+  }
   
